This file describes the changes to the Log for C++ library. See the CVS repository for more detailed descriptions.

2003-05-09 Bastiaan Bakker <bastiaan.bakker@lifeline.nl>
	* log4cpp.pc.in, configure.in, Makefile.am: added pkgconfig file.

	* include/log4cpp/PropertyConfigurator.hh: ConversionPattern instead 
	of pattern (patch #692193).

	* src/PatternLayout.cpp: fix bounds problem on logging messages 
	(bug #688715)
	* tests/testPattern.cpp: added test for bug #688715.	

	* tests/Makefile.am: added testNTEventLog.cpp to EXTRA_DIST 
	(bug #718941)
	
2003-04-07 Bastiaan Bakker <bastiaan.bakker@lifeline.nl>
	* log4cpp.spec.in: added log4cpp.m4 to -devel package.
	
2003-03-26 Bastiaan Bakker <bastiaan.bakker@lifeline.nl>
	* src/StringUtil.cpp: added \r and \n to whitespace characters.
	* src/Properties.cpp: trim property keys and values. Fixes
	bug #710164.

	* src/HierarchyMaintainer.cpp: don't create a default appender for
	the root category. (bug #648341)
	
2003-03-23 Bastiaan Bakker <bastiaan.bakker@lifeline.nl>
	* doc/html/index.html: added link to SuSE RPMS built by Pascal Bleser.
	
2003-03-10 David Resnick <dresnick@mobilespear.com>
    * include/log4cpp/NTEventLogAppender.hh, include/log4cpp/Portability.hh,
    include/log4cpp/threading/BoostThreads.hh, 
    include/log4cpp/config-win32-stlport-boost.h, src/RollingFileAppender.cpp,
    msvc6/log4cppDLL_stlport_boost/log4cppDLL_stlport_boost.dsp,
    msvc6/log4cppDLL_stlport_boost/log4cppDLL_stlport_boost.rc,
    msvc6/log4cppDLL_stlport_boost/readme.txt,
    msvc6/msvc6.dsw: added build for MSVC that uses boost 1.28.0 and 
    STLport 4.5.3. See msvc6/log4cppDLL_stlport_boost/readme.txt for
    more details.

    * msvc6/testMain_stlport_boost/testMain_stlport_boost.dsp,
    msvc6/testNDC_stlport_boost/testNDC_stlport_boost.dsp,
    msvc6/testPropertyConfig_stlport_boost/testPropertyConfig_stlport_boost.dsp,
    msvc6/testNTEventLog_stlport_boost/testNTEventLog_stlport_boost.dsp: